Updates bootstraptheme top nav menu to use new built-in submenu support instead of our hack, also adds theme configuration options to set menu alignment to left/right and menu location of top fixed, bottom fixed, or top static; also changes pagination links to use 'small' so its not so large [#893]

--- a/themes/bootstraptheme/less/bootstraptheme.less
+++ b/themes/bootstraptheme/less/bootstraptheme.less
@@ -22,8 +22,9 @@ body { //    background-color: @special; /* here is a sample variable set exampl
 }
 
 .pagination-links {
-  line-height: 2.1em;
+  line-height: 1.8em;
 }
+
 .showall-accordion .dashboard .hd a.collapse {
   height : 34px;
 }
@@ -64,58 +65,67 @@ li [class^="icon-"], li [class*=" icon-"], li .icon-large[class^="icon-"], li .i
   width : auto;
 }
 
-.nav li.dropdown ul.dropdown-menu li:HOVER ul.dropdown-menu li:HOVER.dropdown > ul.dropdown-menu,
-.nav li.dropdown ul.dropdown-menu li:HOVER ul.dropdown-menu {
-  display               : block;
-  position              : absolute;
-  left                  : 100%;
-  -webkit-border-radius : 3px;
-  -moz-border-radius    : 3px;
-  border-radius         : 3px;
-}
+//.nav li.dropdown ul.dropdown-menu li:HOVER ul.dropdown-menu li:HOVER.dropdown > ul.dropdown-menu,
+//.nav li.dropdown ul.dropdown-menu li:HOVER ul.dropdown-menu {
+//  display               : block;
+//  position              : absolute;
+//  left                  : 100%;
+//  -webkit-border-radius : 3px;
+//  -moz-border-radius    : 3px;
+//  border-radius         : 3px;
+//}
+//
+//.nav li.dropdown ul.dropdown-menu li:HOVER ul.dropdown-menu li.dropdown > ul.dropdown-menu,
+//.nav li.dropdown ul.dropdown-menu ul.dropdown-menu {
+//  display    : none;
+//  float      : right;
+//  position   : relative;
+//  top        : auto;
+//  margin-top : -30px;
+//}
+//
+//.nav li.dropdown ul.dropdown-menu .dropdown-menu::before {
+//  content            : '';
+//  display            : inline-block;
+//  border-top         : 7px solid transparent;
+//  border-bottom      : 7px solid transparent;
+//  border-right       : 7px solid #CCC;
+//  border-right-color : rgba(0, 0, 0, 0.2);
+//  position           : absolute;
+//  top                : 9px;
+//  left               : -14px;
+//}
+//
+//.nav li.dropdown ul.dropdown-menu .dropdown-menu::after {
+//  content       : '';
+//  display       : inline-block;
+//  border-top    : 6px solid transparent;
+//  border-bottom : 6px solid transparent;
+//  border-right  : 6px solid white;
+//  position      : absolute;
+//  top           : 10px;
+//  left          : -12px;
+//}
 
-.nav li.dropdown ul.dropdown-menu li:HOVER ul.dropdown-menu li.dropdown > ul.dropdown-menu,
-.nav li.dropdown ul.dropdown-menu ul.dropdown-menu {
-  display    : none;
-  float      : right;
-  position   : relative;
-  top        : auto;
-  margin-top : -30px;
-}
-
-.nav li.dropdown ul.dropdown-menu .dropdown-menu::before {
-  content            : '';
-  display            : inline-block;
-  border-top         : 7px solid transparent;
-  border-bottom      : 7px solid transparent;
-  border-right       : 7px solid #CCC;
-  border-right-color : rgba(0, 0, 0, 0.2);
-  position           : absolute;
-  top                : 9px;
-  left               : -14px;
-}
-
-.nav li.dropdown ul.dropdown-menu .dropdown-menu::after {
-  content       : '';
-  display       : inline-block;
-  border-top    : 6px solid transparent;
-  border-bottom : 6px solid transparent;
-  border-right  : 6px solid white;
-  position      : absolute;
-  top           : 10px;
-  left          : -12px;
-}
-
-.nav b.caret {
-  border-top-color    : black;
-  border-bottom-color : black;
-}
+//.nav b.caret {
+//  border-top-color    : black;
+//  border-bottom-color : black;
+//}
 
 #admintoolbar {
   z-index : 1031;
 }
 
 .navbar-spacer {
+  height : 45px;
+}
+
+.navbar-spacer-bottom {
+  position : fixed;
+  bottom: 0;
+}
+
+.menu-spacer-bottom {
   height : 45px;
 }
 
